098_bst_map/grade.txt
Grading at 11/15/2021:22:00:17.954994
For commit ID c3ccb96cabeb91be6032be1568024b99d75b9bfa
Grading at Mon Nov 15 17:00:16 EST 2021
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = int; V = int]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = int; V = int]’
89-tester.cpp:197:1:   required from here
bstmap.h:112:21: error: variable ‘ret’ set but not used [-Werror=unused-but-set-variable]
     std::pair<K, V> ret = std::make_pair(current->key, current->value);
                     ^~~
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = int; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = int; V = Tester]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = Tester; V = int]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘std::pair<_T1, _T2> BstMap<K, V>::helperRemove(BstMap<K, V>::Node*) [with K = Tester; V = Tester]’:
bstmap.h:99:40:   required from ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = Tester]’
89-tester.cpp:197:1:   required from here
bstmap.h:117:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
